style/home.css
* {
	box-sizing: border-box;
}

body {
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	overflow-x: hidden;
	/* font-size: 80%; */
}

a {
	text-decoration: none;
}

ul {
	list-style-type: none;
}

blockquote {
	border-left: 0.5em solid #888;
	padding-left: 1em;
	margin-left: 2em;
	display: table;
	background-image: linear-gradient(to right, rgba(0,0,0,0.1), rgba(0,0,0,0));
}

#headerPhoto {
	height: 33vw;
	width: 100%;
	min-height: 50vh;
	object-fit: cover;
	overflow-x: hidden;
	z-index: -1;
}

.stickyTop {
	position: fixed;
	left: 0px;
	top: 0px;
}

.headerSpacer {
	height: 33vw;
	min-height: 50vh;
	background-color: rgba(0,0,0,0);
}

.headerSpacer p {
	font-family: serif;
	color: white;
	font-size: 5em;
	text-align: center;
	text-shadow: 2px 2px 3px #000, -2px 2px 3px #000, 2px -2px 3px #000, -2px -2px 3px #000;
	margin: auto;
	position: relative;
	top: 50%;
	transform: translate(0, -50%);
}

.headerSpacer img {
	height: 25vw;
	max-width: 66vw;
	min-height: 35vh;
	object-fit: scale-down;
	position: relative;
	top: 40%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.dividerBar {
	display: block;
	position: relative;
	top: -3em;
	height: 6em;
	/* background-color: #202020; */
	background-image: linear-gradient(rgba(0,0,0,0),rgba(16,16,16,0.8), #080808, rgba(0,0,0,0.8), rgba(0,0,0,0.4), rgba(0,0,0,0));
	/* position: absolute; */
	width: 100%;
	/* left: 0; */
}

.contentContainer {
	position:absolute;
	left:0;
	background-color: #efd;
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-size: cover;
	background-position: center;
	min-width: 100%;
	min-height: 100%;
	/* overflow: hidden; */
}

.content {
	background-color: rgba(255,255,255,0.85);
	border: 2px solid #222;
	border-radius: 10px;
	box-shadow: rgba(0,0,0,0.8) 3px 3px 5px;
	color: black;
	width: 60%;
	min-width: 35em;
	padding: 0.5em;
	margin: 2em auto 2em auto;
}

.content::after, .clearfix::after, .read-now::before{
	content: "";
	clear: both;
	display: table;
}

.content h1 {
	font-variant: small-caps;
	text-align: center;
	line-height: 150%;
	padding: 0.25em 0.5em;
}

.content h2 {
	text-align: center;
	line-height: 150%;
	padding: 0 0.5em;
}

.content p {
	font-size: 1em;
	padding: 0 1em;
	line-height: 150%;
}

.content .read-now {
	font-size: 1.5em;
	text-align: center;
}

/* .content p::first-letter { */
	/* float: left; */
	/* font-size: 300%; */
	/* line-height: 100%; */
/* } */

.content img {
	margin: 0 1em 1em 1em;
	width: 30%;
}

.button {
	padding: 0.5em;
	color: white;
	background-color: #888;
	border: 2px outset #666;
	border-radius: 5%;
	margin: 1em;
}

.button:hover {
	box-shadow: #444 0 0 10px 2px;
}

address {
	font-size: 0.75em;
	color: #888;
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	background-color: #222;
	text-align: center;
	z-index: 1;
}

@media only screen and (max-width:620px) {
	/* For mobile phones: */
	.content {
		width: 90%;
		min-width: initial;
	}
	/* #headerPhoto { */
		/* position: static; */
		/* margin: -5%; */
		/* width: 110%; */
		/* left: 0; */
		/* top: 14.7em; */
	/* } */
	/* .headerSpacer { */
		/* height: 14.7em; */
	/* } */
}

